--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
 		"react-router-dom": "^5.1.2"
 	},
 	"devDependencies": {
-		"@babel/core": "7.9.0",
-		"@babel/preset-env": "^7.7.1",
+		"@babel/core": "7.9.6",
+		"@babel/preset-env": "^7.9.6",
 		"@babel/preset-react": "^7.7.0",
-		"@pmmmwh/react-refresh-webpack-plugin": "0.1.3",
+		"@pmmmwh/react-refresh-webpack-plugin": "0.3.0-beta.6",
 		"babel-loader": "^8.0.6",
 		"babel-plugin-styled-components": "^1.10.6",
 		"file-loader": "^6.0.0",
-		"html-webpack-plugin": "^4.2.0",
-		"react-refresh": "^0.8.1",
+		"html-webpack-plugin": "^4.3.0",
+		"react-refresh": "^0.8.2",
 		"styled-components": "^5.1.0",
-		"webpack": "^4.41.2",
+		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.9.0"
 	},
