--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-	"name": "kont.me",
-	"version": "0.0.1",
-	"description": "",
-	"main": "index.html",
-	"license": "MIT",
-	"scripts": {
-		"start": "webpack-dev-server --hot --mode development --inline",
-		"compile": "NODE_ENV=production webpack -p -c webpack.config.js"
-	},
-	"dependencies": {
-		"front-matter": "^3.1.0",
-		"raw-loader": "^4.0.1",
-		"react": "16.13.1",
-		"react-dom": "16.13.1",
-		"react-highlight-words": "^0.16.0",
-		"react-markdown": "^4.3.1",
-		"react-router-dom": "^5.1.2"
-	},
-	"devDependencies": {
-		"@babel/core": "7.9.6",
-		"@babel/preset-env": "^7.9.6",
-		"@babel/preset-react": "^7.7.0",
-		"@pmmmwh/react-refresh-webpack-plugin": "0.3.0-beta.6",
-		"babel-loader": "^8.0.6",
-		"babel-plugin-styled-components": "^1.10.6",
-		"file-loader": "^6.0.0",
-		"html-webpack-plugin": "^4.3.0",
-		"react-refresh": "^0.8.2",
-		"styled-components": "^5.1.0",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.9.0"
-	},
-	"keywords": []
+  "name": "kont.me",
+  "version": "0.0.1",
+  "description": "",
+  "main": "index.html",
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --hot --mode development --inline",
+    "compile": "NODE_ENV=production webpack -p -c webpack.config.js"
+  },
+  "dependencies": {
+    "front-matter": "^3.2.1",
+    "raw-loader": "^4.0.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-highlight-words": "^0.16.0",
+    "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.7.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.3.1",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
+    "react-refresh": "^0.8.2",
+    "styled-components": "^5.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "keywords": []
 }
