--- a/package.json
+++ b/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "kont.me",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.html",
-  "license": "MIT",
-  "scripts": {
-    "start": "webpack-dev-server --hot --mode development --inline",
-    "compile": "NODE_ENV=production webpack -p -c webpack.config.js"
-  },
-  "dependencies": {
-    "front-matter": "^3.2.1",
-    "raw-loader": "^4.0.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-highlight-words": "^0.16.0",
-    "react-markdown": "^4.3.1",
-    "react-router-dom": "^5.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.7.0",
-    "@pmmmwh/react-refresh-webpack-plugin": "0.3.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-styled-components": "^1.10.6",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "react-refresh": "^0.8.2",
-    "styled-components": "^5.1.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0"
-  },
-  "keywords": []
+	"name": "kont.me",
+	"version": "0.0.1",
+	"description": "",
+	"main": "index.html",
+	"license": "MIT",
+	"scripts": {
+		"start": "webpack serve --hot --mode development --inline",
+		"compile": "NODE_ENV=production webpack --mode production -c webpack.config.js"
+	},
+	"dependencies": {
+		"buffer": "^6.0.2",
+		"front-matter": "^4.0.2",
+		"imports-loader": "^1.2.0",
+		"path-browserify": "^1.0.1",
+		"process": "^0.11.10",
+		"raw-loader": "^4.0.2",
+		"react": "17.0.1",
+		"react-dom": "17.0.1",
+		"react-highlight-words": "^0.16.0",
+		"react-markdown": "^5.0.3",
+		"react-router-dom": "^5.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "7.12.3",
+		"@babel/preset-env": "^7.12.1",
+		"@babel/preset-react": "^7.12.5",
+		"@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+		"babel-loader": "^8.2.1",
+		"babel-plugin-styled-components": "^1.11.1",
+		"file-loader": "^6.2.0",
+		"html-webpack-plugin": "^4.5.0",
+		"react-refresh": "^0.9.0",
+		"styled-components": "^5.2.1",
+		"webpack": "^5.6.0",
+		"webpack-cli": "^4.2.0",
+		"webpack-dev-server": "^3.11.0"
+	},
+	"keywords": []
 }
