Utilisation de front-matter-loader pour alléger l'app
Le traitement se fait à la compilation

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"@babel/plugin-transform-react-jsx": "^7.12.13",
 		"buffer": "^6.0.2",
 		"front-matter": "^4.0.2",
+		"front-matter-loader": "^2.0.0",
 		"imports-loader": "^1.2.0",
+		"json-loader": "^0.5.7",
 		"path-browserify": "^1.0.1",
 		"process": "^0.11.10",
 		"raw-loader": "^4.0.2",
