--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@babel/plugin-transform-react-jsx": "^7.12.13",
 		"buffer": "^6.0.2",
 		"front-matter-loader": "^2.0.0",
+		"html-loader": "^1.3.2",
 		"imports-loader": "^1.2.0",
 		"json-loader": "^0.5.7",
 		"path-browserify": "^1.0.1",
@@ -23,7 +24,11 @@
 		"react-helmet": "^6.1.0",
 		"react-highlight-words": "^0.16.0",
 		"react-markdown": "^5.0.3",
-		"react-router-dom": "^5.2.0"
+		"react-router-dom": "^5.2.0",
+		"remark": "^13.0.0",
+		"remark-html": "^13.0.1",
+		"remark-loader": "^3.0.0",
+		"remark-react": "^8.0.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.13",
