--- a/projets.yaml
+++ b/projets.yaml
@@ -3,6 +3,11 @@
   lien: https://nosgestesclimat.fr
   description: J'ai lancé le calculateur officiel de l'empreinte climat personnelle, aujourd'hui utilisé par des millions de français.
   image: https://nosgestesclimat.fr/images/dessin-nosgestesclimat.png
+- nom: Datagir
+  code: https://github.com/datagir
+  lien: https://datagir.ademe.fr
+  description: J'ai rejoint l'équipe Datagir, une collaboration beta.gouv.fr x ADEME pour valoriser les données publiées par l'ADEME auprès du grand public.
+  image: https://avatars.githubusercontent.com/u/78278195?s=200&v=4
 - nom: Futureco
   code: https://github.com/laem/futureco
   lien: https://futur.eco
