--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@babel/plugin-transform-react-jsx": "^7.12.13",
 		"buffer": "^6.0.2",
+		"copy-webpack-plugin": "^10.2.0",
 		"front-matter-loader": "^2.0.0",
 		"html-loader": "^1.3.2",
 		"imports-loader": "^1.2.0",
@@ -43,7 +44,7 @@
 		"react-refresh": "^0.9.0",
 		"styled-components": "^5.2.1",
 		"webpack": "^5.6.0",
-		"webpack-cli": "^4.2.0",
+		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^3.11.0"
 	},
 	"keywords": []
