--- a/projets.yaml
+++ b/projets.yaml
@@ -11,31 +11,32 @@
 - nom: Futureco
   code: https://github.com/laem/futureco
   lien: https://futur.eco
-  description: Il manquait un moyen facile de trouver l'empreinte climat des gestes de notre quotidien. Pas encore trouvé son public, v2 bientôt.
+  description: Il manquait un moyen facile de trouver l'empreinte climat des gestes de notre quotidien. Quelques milliers de visites par mois seulement, mais v2 bientôt avec plein de nouveautés.
   image: https://futur.eco/images/logo.svg
 - nom: Vélo libre
   code: https://github.com/laem/velolibre
   lien: https://velolib.re
-  description: Il n'y avait pas de guide ouvert pour construire son vélo gravel, maintenant si !
+  description: Il n'y avait pas de guide ouvert (open source) pour construire son vélo, maintenant si. On commence par le gravel !
   image: https://imgur.com/N5HILMv.png
 - nom: Villes plus
   code: https://github.com/laem/villesplus
   lien: https://villes.plus
-  description: Le 1er classement des métropoles les plus piétonnes.
+  description: Le 1er classement des métropoles les plus piétonnes, au-delà du centre ville  historique qui ne concerne qu'une minorité des gens. Parce qu'une ville piétonne, c'est une ville agréable.
   image: https://imgur.com/KZKYlFo.png
 - nom: Publicodes
   code: https://github.com/betagouv/publicodes
   lien: https://publi.codes
-  description: Il manquait un langage pour coder et expliquer les algorithmes d'intérêt public.
+  description: Il manquait un langage de programmation simple pour coder et expliquer en français les algorithmes d'intérêt public.
   image: https://publi.codes/img/logo-publicodes.svg
 - nom: Mon Entreprise
   code: https://github.com/betagouv/mon-entreprise/
   lien: https://mon-entreprise.fr
-  description: J'ai lancé l'assistant officiel des entrepreneurs, utilisé par des millions de gens chaque année.
+  description: J'ai lancé l'assistant officiel des entrepreneurs, incubé à beta.gouv.fr et repris par l'URSSAF, utilisé par des millions de gens chaque année.
   image: https://imgur.com/Zz4LgKl.png
   meilleure image: https://blog.beta.gouv.fr/img/posts/logo-me.svg
 - nom: Transparence média
   code: https://github.com/laem/transparencemedia
   lien: https://transparencemedia.fr
-  description: Qui détient nos médias ? Il est bien temps qu'on le sache.
+  description: |
+    Qui détient nos médias ? Il est bien temps qu'on le sache. Lancé pour la présidentielle 2017, inconnu, il va peut-être renaître pour la présidentielle 2022 ? Pour aider, rendez-vous ici : https://github.com/pom421/transparencemedia.
   image: https://imgur.com/quXGjuVm.png
