Markdown dans les descriptions

--- a/projets.yaml
+++ b/projets.yaml
@@ -38,5 +38,5 @@
   code: https://github.com/laem/transparencemedia
   lien: https://transparencemedia.fr
   description: |
-    Qui détient nos médias ? Il est bien temps qu'on le sache. Lancé pour la présidentielle 2017, inconnu, il va peut-être renaître pour la présidentielle 2022 ? Pour aider, rendez-vous ici : https://github.com/pom421/transparencemedia.
+    Qui détient nos médias ? Il est bien temps qu'on le sache. Lancé pour la présidentielle 2017, inconnu, il va peut-être renaître pour la présidentielle 2022 ? Pour aider, [rendez-vous ici](https://github.com/pom421/transparencemedia).
   image: https://imgur.com/quXGjuVm.png
