--- a/projets.yaml
+++ b/projets.yaml
@@ -1,7 +1,7 @@
 - nom: Nos Gestes Climat
   code: https://github.com/datagir/nosgestesclimat
   lien: https://nosgestesclimat.fr
-  description: J'ai développé le calculateur officiel de l'empreinte climat personnelle, aujourd'hui utilisé par des millions de français.
+  description: Je développe dans l'équipe Datagir le calculateur officiel de l'empreinte climat personnelle, aujourd'hui utilisé par des millions de français.
   image: https://nosgestesclimat.fr/images/dessin-nosgestesclimat.png
   début: 2020
 - nom: Datagir
