--- a/projets.yaml
+++ b/projets.yaml
@@ -14,7 +14,7 @@
   code: https://github.com/laem/futureco
   lien: https://futur.eco
   description: Il manquait un moyen facile de trouver l'empreinte climat des gestes de notre quotidien. Quelques milliers de visites par mois seulement, mais bientôt une v2 avec plein de nouveautés.
-  image: https://futur.eco/images/logo.svg
+  image: https://futur.eco/logo.svg
   début: 2018
 - nom: Vélo libre
   code: https://github.com/laem/velolibre
