Image NGC cassée

--- a/projets.yaml
+++ b/projets.yaml
@@ -2,7 +2,7 @@
   code: https://github.com/datagir/nosgestesclimat
   lien: https://nosgestesclimat.fr
   description: Je développe dans l'équipe Datagir le calculateur officiel de l'empreinte climat personnelle, aujourd'hui utilisé par des millions de français.
-  image: https://nosgestesclimat.fr/images/dessin-nosgestesclimat.png
+  image: https://i.imgur.com/GQeCHQg.png
   début: 2020
 - nom: Datagir
   code: https://github.com/datagir
