MAJ des projets

--- a/projets.yaml
+++ b/projets.yaml
@@ -16,20 +16,29 @@
 - nom: Futureco
   code: https://github.com/laem/futureco
   lien: https://futur.eco
-  description: Il manquait un moyen facile de trouver l'empreinte climat des gestes de notre quotidien. Quelques milliers de visites par mois seulement, mais bientôt une v2 avec plein de nouveautés.
+  description: |
+    Il manquait un moyen facile de trouver l'empreinte climat des gestes de notre quotidien. La plateforme technique de base de Nos Gestes Climat, qui a inspiré le lancement du site public ADEME [ImpactCO2](https://impactco2.fr). 
+
+    <br/>
+
+    En 2023, Futureco renait et se concentre sur les transports : simulateurs de référence de l'empreinte carbone de l'avion et du ferry, calculateur du coût d'une voiture... et un grand projet en cours de développement ;)
   image: https://futur.eco/logo.svg
   début: 2018
+- nom: Villes plus
+  code: https://github.com/laem/villesplus
+  lien: https://villes.plus
+  description: |
+
+    Le classement des villes et territoires cyclables.
+
+    Lancé comme le 1er classement des métropoles les plus piétonnes, au-delà du centre ville historique qui ne concerne qu'une minorité des gens. Parce qu'une ville piétonne, c'est une ville agréable.
+  image: https://www.villes.plus/logo.svg
+  début: 2019
 - nom: Vélo libre
   code: https://github.com/laem/velolibre
   lien: https://velolib.re
   description: Il n'y avait pas de guide ouvert (open source) pour construire son vélo, maintenant si. On commence par le gravel et un peu de documentation !
   image: https://imgur.com/N5HILMv.png
-  début: 2019
-- nom: Villes plus
-  code: https://github.com/laem/villesplus
-  lien: https://villes.plus
-  description: Le 1er classement des métropoles les plus piétonnes, au-delà du centre ville historique qui ne concerne qu'une minorité des gens. Parce qu'une ville piétonne, c'est une ville agréable.
-  image: https://imgur.com/KZKYlFo.png
   début: 2019
 - nom: Publicodes
   code: https://github.com/betagouv/publicodes
