--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"node": ">= 16"
 	},
 	"scripts": {
-		"start": "webpack serve --hot --mode development --inline",
+		"start": "webpack serve --hot --mode development",
 		"compile": "NODE_ENV=production webpack --mode production -c webpack.config.js",
 		"stats": "NODE_ENV=production webpack --mode production -c webpack.config.js --profile --json > stats.json"
 	},
@@ -18,7 +18,7 @@
 		"copy-webpack-plugin": "^10.2.0",
 		"downa": "^1.0.1",
 		"front-matter-loader": "^2.0.0",
-		"html-loader": "^1.3.2",
+		"html-loader": "^4.2.0",
 		"imports-loader": "^1.2.0",
 		"json-loader": "^0.5.7",
 		"path-browserify": "^1.0.1",
@@ -40,16 +40,16 @@
 		"@babel/core": "^7.12.13",
 		"@babel/preset-env": "^7.12.1",
 		"@babel/preset-react": "^7.12.5",
-		"@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+		"@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
 		"babel-loader": "^8.2.1",
 		"babel-plugin-styled-components": "^1.11.1",
 		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^4.5.0",
+		"html-webpack-plugin": "^5.5.3",
 		"react-refresh": "^0.9.0",
 		"styled-components": "^5.2.1",
-		"webpack": "^5.6.0",
-		"webpack-cli": "^4.9.1",
-		"webpack-dev-server": "^3.11.0"
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4",
+		"webpack-dev-server": "^4.15.1"
 	},
 	"keywords": []
 }
