Icone lien et ajout code ouvert

--- a/projets.yaml
+++ b/projets.yaml
@@ -33,6 +33,8 @@
     Le classement des villes et territoires cyclables.
 
     Lancé comme le 1er classement des métropoles les plus piétonnes, au-delà du centre ville historique qui ne concerne qu'une minorité des gens. Parce qu'une ville piétonne, c'est une ville agréable.
+
+    Aujourd'hui, je développe villes plus comme une plateforme d'évaluation des politiques cyclables françaises.
   image: https://www.villes.plus/logo.svg
   début: 2019
   poids: 1
