--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "2",
 	"description": "",
 	"main": "index.html",
+	"type": "module",
 	"license": "MIT",
 	"engines": {
 		"node": ">= 16"
@@ -13,40 +14,40 @@
 		"stats": "NODE_ENV=production webpack --mode production -c webpack.config.js --profile --json > stats.json"
 	},
 	"dependencies": {
-		"@babel/plugin-transform-react-jsx": "^7.12.13",
-		"buffer": "^6.0.2",
-		"copy-webpack-plugin": "^10.2.0",
+		"@babel/plugin-transform-react-jsx": "^7.23.4",
+		"buffer": "^6.0.3",
+		"copy-webpack-plugin": "^11.0.0",
 		"downa": "^1.0.1",
 		"front-matter-loader": "^2.0.0",
 		"html-loader": "^4.2.0",
-		"imports-loader": "^1.2.0",
+		"imports-loader": "^4.0.1",
 		"json-loader": "^0.5.7",
 		"path-browserify": "^1.0.1",
 		"process": "^0.11.10",
 		"raw-loader": "^4.0.2",
-		"react": "17.0.1",
-		"react-dom": "17.0.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
 		"react-helmet": "^6.1.0",
-		"react-highlight-words": "^0.16.0",
-		"react-markdown": "^5.0.3",
-		"react-router-dom": "^5.2.0",
-		"remark": "^13.0.0",
-		"remark-html": "^13.0.1",
-		"remark-loader": "^3.0.0",
-		"remark-react": "^8.0.0",
-		"yaml-loader": "^0.6.0"
+		"react-highlight-words": "^0.20.0",
+		"react-markdown": "^9.0.1",
+		"react-router-dom": "^6.21.1",
+		"remark": "^15.0.1",
+		"remark-html": "^16.0.1",
+		"remark-loader": "^5.0.0",
+		"remark-react": "^9.0.1",
+		"yaml-loader": "^0.8.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.12.13",
-		"@babel/preset-env": "^7.12.1",
-		"@babel/preset-react": "^7.12.5",
-		"@pmmmwh/react-refresh-webpack-plugin": "0.5.11",
-		"babel-loader": "^8.2.1",
-		"babel-plugin-styled-components": "^1.11.1",
+		"@babel/core": "^7.23.6",
+		"@babel/preset-env": "^7.23.6",
+		"@babel/preset-react": "^7.23.3",
+		"@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+		"babel-loader": "^9.1.3",
+		"babel-plugin-styled-components": "^2.1.4",
 		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^5.5.3",
-		"react-refresh": "^0.9.0",
-		"styled-components": "^5.2.1",
+		"html-webpack-plugin": "^5.6.0",
+		"react-refresh": "^0.14.0",
+		"styled-components": "^6.1.4",
 		"webpack": "^5.89.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-dev-server": "^4.15.1"
