--- a/projets.yaml
+++ b/projets.yaml
@@ -89,7 +89,7 @@
 
     Je l'ai ensuite utilisé avec succès sur mon projet personnel Futureco qui a été la base technique de Nos Gestes Climat pour l'ADEME. En parallèle, d'autres projets innovants comme Code du Travail Numérique, Mes Aides Vélo ainsi que des banques et des startups s'en sont emparés, quand l'équipe de Mon-Entreprise en faisait un vrai langage séparé du projet dans lequel il est né.
 
-  image: https://publi.codes/img/logo-publicodes.svg
+  image: https://publi.codes/favicon.png
   début: 2017
 - nom: Mon Entreprise
   code: https://github.com/betagouv/mon-entreprise/
