--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
 		"@mapbox/polyline": "^1.2.1",
 		"@mapbox/sphericalmercator": "^2.0.0",
 		"@mdx-js/loader": "^3.1.0",
+		"@mdx-js/react": "^3.1.0",
 		"@next/eslint-plugin-next": "^15.0.0",
-		"@next/mdx": "^15.0.0",
+		"@next/mdx": "^15.1.5",
 		"@octokit/rest": "^21.0.2",
 		"@openstreetmap/id-tagging-schema": "^6.8.1",
 		"@opentelemetry/api": "^1.9.0",
@@ -60,6 +61,7 @@
 		"@turf/distance": "^7.1.0",
 		"@turf/length": "^7.1.0",
 		"@turf/turf": "^7.1.0",
+		"@types/mdx": "^2.0.13",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/edge": "^1.1.2",
 		"@vercel/og": "^0.6.3",
@@ -68,6 +70,7 @@
 		"contentlayer2": "0.5.3",
 		"copy-webpack-plugin": "^12.0.2",
 		"date-fns": "^4.1.0",
+		"downa": "^1.0.1",
 		"eslint-config-next": "^15.0.0",
 		"framer-motion": "12.0.0-alpha.1",
 		"fuse.js": "^7.0.0",
